--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Web.config
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Web.config
@@ -8,8 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <!-- slide 19 -->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AvaliadorGastronomicoDb;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AvaliadorGastronomico.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=AvaliadorGastronomicoDb;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\AvaliadorGastronomico.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -115,10 +116,12 @@
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <!-- slide 19 -->
     <contexts>
       <context type="AvaliadorGastronomico.WebUI.Infrastructure.AvaliadorGastronomicoDbContext, AvaliadorGastronomico.WebUI" disableDatabaseInitialization="false">
         <databaseInitializer type="System.Data.Entity.MigrateDatabaseToLatestVersion`2[[AvaliadorGastronomico.WebUI.Infrastructure.AvaliadorGastronomicoDbContext, AvaliadorGastronomico.WebUI],[AvaliadorGastronomico.WebUI.Migrations.Configuration, AvaliadorGastronomico.WebUI]]" />
       </context>
     </contexts>
   </entityFramework>
+ 
 </configuration>
