ajustes no simple membership provider

--- a/AvaliadorGastronomico Aluno/AvaliadorGastronomico.Domain/AvaliadorGastronomico.Domain.csproj
+++ b/AvaliadorGastronomico Aluno/AvaliadorGastronomico.Domain/AvaliadorGastronomico.Domain.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Queries\CriticaQueries.cs" />
     <Compile Include="Queries\RestauranteQueries.cs" />
     <Compile Include="Restaurante.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
