--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Web.config
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Web.config
@@ -35,7 +35,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!-- Slide 14 -->
+    <!-- Slide 14, Slide 51 -->
     <authentication mode="Forms">
       <forms loginUrl="~/Acesso/Login" timeout="2880" />
     </authentication>
@@ -65,6 +65,25 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <!-- slide 51 -->
+    <profile enabled="true" defaultProvider="simple">
+      <providers>
+        <add name="simple" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </profile>
+    <roleManager enabled="true" defaultProvider="simple">
+      <providers>
+        <clear />
+        <add name="simple" type="WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData" />
+      </providers>
+    </roleManager>
+    <membership defaultProvider="simple">
+      <providers>
+        <clear />
+        <add name="simple" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
+      </providers>
+    </membership>
+    
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
