--- a/AvaliadorGastronomico Aluno/AvaliadorGastronomico.WebUI/packages.config
+++ b/AvaliadorGastronomico Aluno/AvaliadorGastronomico.WebUI/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
@@ -15,10 +15,13 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30116.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net461" />
 </packages>
