--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/AvaliadorGastronomico.WebUI.csproj
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/AvaliadorGastronomico.WebUI.csproj
@@ -377,6 +377,8 @@
     <Content Include="Views\Usuarios\Index.cshtml" />
     <Content Include="Views\Info\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.mobile.cshtml" />
+    <Content Include="Views\Home\Index.Mobile.cshtml" />
+    <Content Include="Views\Home\Index.Chrome.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
